--- a/src/html/chunk/mobile-nav.html
+++ b/src/html/chunk/mobile-nav.html
@@ -16,85 +16,10 @@
         </a>
     </div>
     <ul class="mobile-navigation__list">
-        <li class="mobile-navigation__item"><a href="index.html" class="mobile-navigation__link">Главная</a></li>
-        <li class="mobile-navigation__item">
-            <a class="mobile-navigation__link spoiler-arrow">Мототехника</a>
-            <div class="dropdown js-mobile-dropdown">
-                <nav class="dropdown__menu">
-                    <ul class="dropdown__list">
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="mototechnics.html">Мотоциклы</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="mototechnics.html">Мопеды</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="mototechnics.html">Скутеры</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="mototechnics.html">Квадроциклы</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="mototechnics.html">Гидроциклы</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="mototechnics.html">Снегоходы</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </li>
-        <li class="mobile-navigation__item">
-            <a class="mobile-navigation__link spoiler-arrow">Мотозапчасти</a>
-            <div class="dropdown js-mobile-dropdown">
-                <nav class="dropdown__menu">
-                    <ul class="dropdown__list">
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Мотохимия</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Шины</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Расходники</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Лобовые стёкла</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Пластик</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </li>
-        <li class="mobile-navigation__item">
-            <a class="mobile-navigation__link spoiler-arrow">Экипировка</a>
-            <div class="dropdown js-mobile-dropdown">
-                <nav class="dropdown__menu">
-                    <ul class="dropdown__list">
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Шлемы</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Куртки</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Комбинезоны</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Перчатки</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Мотоботы</a>
-                        </li>
-                        <li class="dropdown__item">
-                            <a class="dropdown__link" href="outfit.html">Аксессуары</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </li>
+        <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="index.html">Главная</a></li>
+        <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="mototechnics.html">Мототехника</a></li>
+        <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="outfit.html">Мотозапчасти</a></li>
+        <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="outfit.html">Экипировка</a></li>
         <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="motoservices.html">Мотосервис</a></li>
         <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="articles.html">Статьи</a></li>
         <li class="mobile-navigation__item"><a class="mobile-navigation__link" href="contacts.html">Контакты</a></li>
