--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
+            @@include('./chunk/top-header.html')
             <div class="header__bottom bottom-header">
                 <div class="container">
                     <nav class="bottom-header__nav navigation">
